[gd_scene load_steps=5 format=3 uid="uid://b5k84aoetc6q6"]

[ext_resource type="Script" uid="uid://byv20qssl8cgu" path="res://scripts/game_over.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://b3548kydyy6v1" path="res://fonts/cutepixel/CutePixel.ttf" id="2_font"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font = ExtResource("2_font")
font_size = 48
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_subtitle"]
font = ExtResource("2_font")
font_size = 24
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Over!"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="DuckCountLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "0 ducks happily made it to your pond"
label_settings = SubResource("LabelSettings_subtitle")
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart Game"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
